소셜 로그인 구현 1차

--- a/build.gradle
+++ b/build.gradle
@@ -34,11 +34,15 @@ dependencies {
         exclude group: 'com.oracle.ojdbc', module: 'simplefan'
         exclude group: 'com.oracle.ojdbc', module: 'ons'
     }
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.security:spring-security-test'
 
     /* querydsl*/
     implementation 'com.querydsl:querydsl-jpa'
@@ -59,6 +63,11 @@ dependencies {
 
     /* Jasypt */
     implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.4'
+
+    /* JWT */
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
 }
 
 tasks.named('test') {
