스프링 시큐리티 및 소셜 로그인 구현 (에러 발생 코드. 다시 확인하고 수정할 것)

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -31,6 +31,14 @@ spring:
     parser:
       allow-unquoted-control-chars: true
 
+  security:
+    user:
+      name: user
+      password: 1234
+
+#  main:
+#    allow-bean-definition-overriding: true
+
 #API Document
 springdoc:
   swagger-ui:
@@ -50,6 +58,10 @@ jasypt:
     iv-generator-classname: org.jasypt.iv.NoIvGenerator
 
 app:
+  auth:
+    tokenSecret: 926D96C90030DD58429D2751AC1BDBBC
+    tokenExpiry: 1800000
+    refreshTokenExpiry: 604800000
   oauth2:
     authorizedRedirectUris:
       - http://localhost:3000/oauth2/redirect
