--- a/build.gradle
+++ b/build.gradle
@@ -34,8 +34,8 @@ dependencies {
         exclude group: 'com.oracle.ojdbc', module: 'simplefan'
         exclude group: 'com.oracle.ojdbc', module: 'ons'
     }
-    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
-    implementation 'org.springframework.boot:spring-boot-starter-security'
+//    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+//    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
     compileOnly 'org.projectlombok:lombok'
