소셜 로그인 수정 3 : 스프링 시큐리티 적용 및 JWT 토큰 설정

--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ dependencies {
         exclude group: 'com.oracle.ojdbc', module: 'ons'
     }
 //    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
-//    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
     compileOnly 'org.projectlombok:lombok'
