소셜 로그인 수정 6: JWT 토큰 쿠키 저장 및 프론트엔드 화면 redirect 처리

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -57,6 +57,10 @@ jasypt:
     algorithm: PBEWithMD5AndDES
     iv-generator-classname: org.jasypt.iv.NoIvGenerator
 
+app:
+  oauth2:
+    authorizedRedirectUris: http://localhost:3000/oauth2/redirect
+
 #app:
 #  auth:
 #    tokenSecret: 926D96C90030DD58429D2751AC1BDBBC
