--- a/build.gradle
+++ b/build.gradle
@@ -57,7 +57,10 @@ dependencies {
     implementation 'org.springdoc:springdoc-openapi-ui:1.6.9'
 
     /* slack */
-    implementation 'com.slack.api:slack-api-client:1.24.0'
+    implementation 'com.slack.api:slack-api-client:1.25.1'
+    implementation 'com.slack.api:bolt:1.25.1'
+    implementation 'com.slack.api:bolt-servlet:1.25.1'
+    implementation 'com.slack.api:bolt-jetty:1.25.1'
 
     /* jackson-databind */
     implementation 'com.fasterxml.jackson.core:jackson-databind'
@@ -70,7 +73,8 @@ dependencies {
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
 
-
+    /* Quartz */
+    implementation 'org.springframework.boot:spring-boot-starter-quartz'
 
 }
 
