--- a/build.gradle
+++ b/build.gradle
@@ -76,6 +76,7 @@ dependencies {
     /* Quartz */
     implementation 'org.springframework.boot:spring-boot-starter-quartz'
 
+    implementation 'org.springframework.boot:spring-boot-starter-parent:2.7.3'
 }
 
 tasks.named('test') {
@@ -102,4 +103,17 @@ compileQuerydsl{
 }
 configurations {
     querydsl.extendsFrom compileClasspath
+}
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'com.studyLog4u.StudyLog4uBackendApplication'
+    }
+    from {
+        configurations.runtimeClasspath.collect {
+            it.isDirectory() ? it : zipTree(it)
+        }
+    }
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+    enabled = false // plain.jar 생성하지 않는다.
 }
