--- a/build.gradle
+++ b/build.gradle
@@ -105,15 +105,6 @@ configurations {
     querydsl.extendsFrom compileClasspath
 }
 
-//bootJar {
-//    mainClass = 'com.studyLog4u.StudyLog4uBackendApplication'
-//}
-//
-//bootRun {
-//    String activeProfile = System.properties['spring.profiles.active']
-//    systemProperty "spring.profiles.active", activeProfile
-//}
-
 jar {
     manifest {
         attributes 'Main-Class': 'com.studyLog4u.StudyLog4uBackendApplication'
@@ -125,4 +116,13 @@ jar {
     }
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
     enabled = false // plain.jar 생성하지 않는다.
+}
+
+bootJar {
+    mainClass = 'com.studyLog4u.StudyLog4uBackendApplication'
+}
+
+bootRun {
+    String activeProfile = System.properties['spring.profiles.active']
+    systemProperty "spring.profiles.active", activeProfile
 }
