--- a/build.gradle
+++ b/build.gradle
@@ -76,6 +76,8 @@ dependencies {
     /* Quartz */
     implementation 'org.springframework.boot:spring-boot-starter-quartz'
 
+    /* AWS */
+    implementation 'io.awspring.cloud:spring-cloud-starter-aws:2.4.2'
 }
 
 tasks.named('test') {
