이미지 업로드 기능 구현 3

--- a/build.gradle
+++ b/build.gradle
@@ -78,6 +78,9 @@ dependencies {
 
     /* AWS */
     implementation 'io.awspring.cloud:spring-cloud-starter-aws:2.4.2'
+
+    /* SnakeYAML*/
+    implementation 'org.yaml:snakeyaml:1.33'
 }
 
 tasks.named('test') {
