설정 파일 수정 (deploy 분리)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,5 +3,5 @@ server:
 
 spring:
   profiles:
-    include: oauth, aws
-    active: prod #prod or local
+    #include: oauth, aws
+    active: deploy #deploy or local
