--- a/.gitignore
+++ b/.gitignore
@@ -39,5 +39,5 @@ out/
 ### 깃헙 업로드 제외 파일 ###
 src/main/resources/oracleWallet
 logs/
-#application-oauth.yml
+src/main/resources/application-deploy.yml
 /build/libs/
