--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -32,6 +32,11 @@ spring:
       name: user
       password: 1234
 
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
+
 #API Document
 springdoc:
   swagger-ui:
